Fix groups model "note updated" signal, removed horrific hack which kept invalidating the model filter.

BUG: 273725
REVIEW: 101473